# OpenCompGraphMaya

./: .gitignore  .gitmodules  AUTHORS.txt  BUILD.md  CMakeLists.txt  INSTALL.md  LICENSE  README.md  build_OpenCompGraphMaya_windows64_maya2018.bat
include/: CMakeLists.txt
include/OpenCompGraphMaya/: CMakeLists.txt  buildConstant.h.in  nodeTypeIds.h
include/opencompgraphmaya/: CMakeLists.txt  node_type_ids.h
mel/: CMakeLists.txt
mel/AETemplates/: AEocgColorGradeTemplate.mel  AEocgCompNode.mel  AEocgDiskCache.mel  AEocgImageCacheTemplate.mel  AEocgImageCropTemplate.mel  AEocgImageMergeTemplate.mel  AEocgImagePlaneTemplate.mel  AEocgImageReadTemplate.mel  AEocgImageResampleTemplate.mel  AEocgImageTransformTemplate.mel  AEocgImageWriteTemplate.mel  AEocgLensDistortTemplate.mel  AEocgNodeIo.mel  AEocgNodeNetwork.mel  AEocgNodeTemplateCommon.mel  AEocgPreferencesTemplate.mel  AEocgRender.mel
mel/NETemplates/: NEocgColorGradeTemplate.xml  NEocgImageCacheTemplate.xml  NEocgImageCropTemplate.xml  NEocgImageMergeTemplate.xml  NEocgImagePlaneTemplate.xml  NEocgImageReadTemplate.xml  NEocgImageResampleTemplate.xml  NEocgImageTransformTemplate.xml  NEocgImageWriteTemplate.xml  NEocgLensDistortTemplate.xml
modules/: CMakeLists.txt  OpenCompGraphMaya_linux.mod  OpenCompGraphMaya_mac.mod  OpenCompGraphMaya_windows.mod
python/: CMakeLists.txt
python/OpenCompGraphMaya/: constant.py.in  render_window.py
shader/: CMakeLists.txt  ocgImagePlane.ogsfx  ocgImagePlaneSolid.ogsfx  ocgImagePlaneTextured.ogsfx
shaders/: imagePlane.ogsfx
src/: CMakeLists.txt  attr_utils.cpp  attr_utils.h  base_node.cpp  base_node.h  color_grade_node.cpp  color_grade_node.h  constant_texture_data.h  execute_cmd.cpp  execute_cmd.h  geometry_buffer.cpp  geometry_buffer.h  global_cache.cpp  global_cache.h  graph_data.cpp  graph_data.h  graph_execute.cpp  graph_execute.h  graph_maya_data.cpp  graph_maya_data.h  image_merge_node.h  image_plane_geometry.cpp  image_plane_geometry.h  image_plane_geometry_buffer.cpp  image_plane_geometry_buffer.h  image_plane_geometry_window.cpp  image_plane_shader.cpp  image_plane_shader.h  image_plane_shape.cpp  image_plane_shape.h  image_plane_sub_scene_override.cpp  image_plane_sub_scene_override.h  image_read_node.cpp  image_read_node.h  image_transform_node.cpp  image_transform_node.h  lens_distort_node.cpp  lens_distort_node.h  logger.cpp  logger.h  (+6 more)
src/comp_nodes/: base_node.cpp  base_node.h  color_grade_node.cpp  color_grade_node.h  image_cache_node.cpp  image_cache_node.h  image_crop_node.cpp  image_crop_node.h  image_merge_node.cpp  image_read_node.cpp  image_read_node.h  image_resample_node.cpp  image_resample_node.h  image_transform_node.cpp  image_transform_node.h  image_write_node.cpp  image_write_node.h  lens_distort_node.cpp  lens_distort_node.h
src/imagePlane/: image_plane_sub_scene_override.cpp  image_plane_sub_scene_override.h  shader.cpp  shader.h  shape.cpp  shape.h  subSceneOverride.cpp  subSceneOverride.h
src/image_plane/: image_plane_geometry_canvas.cpp  image_plane_geometry_canvas.h  image_plane_geometry_override.cpp  image_plane_geometry_override.h  image_plane_geometry_window.cpp  image_plane_geometry_window.h  image_plane_shader.cpp  image_plane_shader.h  image_plane_shape.cpp  image_plane_shape.h  image_plane_sub_scene_override.cpp  image_plane_sub_scene_override.h  image_plane_utils.cpp  image_plane_utils.h
src/utils/: unused.h
tests/: test.py
